--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,8 +6,9 @@
 	margin-top:auto;
 }
 .main-container .container-fluid{
-	padding-top:5em;
-	padding-bottom: 6em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    height: 85vh;
 }
 .top-coin{
 	font-family: 'Aldrich', sans-serif;
